[gd_scene load_steps=3 format=3 uid="uid://6mnhta4r1s0t"]

[ext_resource type="Script" path="res://System/Damage/GD_DamageNuber.gd" id="1_ie5i3"]

[sub_resource type="Theme" id="Theme_60sm4"]
Label/colors/font_color = Color(1, 0, 0, 1)

[node name="S_DamageNuber" type="Node2D"]
script = ExtResource("1_ie5i3")

[node name="LabelContainer" type="Node2D" parent="."]

[node name="DamageLabel" type="Label" parent="LabelContainer"]
z_index = 5
offset_right = 40.0
offset_bottom = 23.0
theme = SubResource("Theme_60sm4")
text = "12"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
